part2-권나은- 8주차 수정

--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,12 @@
   padding: 0;
 }
 
-html {
+html,
+body {
   font-family: Pretendard;
   font-size: 100%;
   font-style: normal;
   line-height: normal;
-  height: 100%;
-}
-
-body {
   width: 100%;
 }
 
