--- a/src/components/folderList/FolderData.css
+++ b/src/components/folderList/FolderData.css
@@ -7,6 +7,7 @@
   border: 1px solid var(--Linkbrary-primary-color, #6d6afe);
   background: #fff;
   cursor: pointer;
+  justify-content: center;
 }
 
 .folderData.selected {
