--- a/src/pages/folder/Folder.css
+++ b/src/pages/folder/Folder.css
@@ -1,7 +1,7 @@
 #wrap {
-  height: auto;
-  min-height: 100%;
   display: flex;
   flex-direction: column;
   gap: 40px;
+  min-height: calc(100vh - 330px);
+  margin-bottom: 40px;
 }
