--- a/src/pages/shared/SharedPage.css
+++ b/src/pages/shared/SharedPage.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  min-height: 100%;
   @media screen and (max-width: 767px) {
     gap: 20px;
   }
